@@ -1,3 +1,8 @@
+2005-07-05  Aaron Luchko  <aluchko@redhat.com>
+
+	* gnu/classpath/jdwp/processor/StringReferenceCommandSet.java:
+	New file.
+
 2005-07-04  Aaron Luchko  <aluchko@redhat.com>
 
 	* gnu/classpath/jdwp/processor/CommandSet.java: New file.
